@@ -1,4 +1,4 @@
-CHANGES.txt - 04/04/2002
+CHANGES.txt - 04/09/2002
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.19
@@ -18,6 +18,7 @@ CHANGES IN HTMLDOC v1.8.19
 	- No longer embed the prolog.ps command header when
 	  PostScript commands are not being embedded in the
 	  output.
+	- HTMLDOC now properly ignores the HTML 4.0 COL element.
 
     BUG FIXES
 
